; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/comdlg32/extr_filedlg.c_COMDLG32_GetCanonicalPath.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/comdlg32/extr_filedlg.c_COMDLG32_GetCanonicalPath.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@MAX_PATH = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [31 x i8] c"current directory=%s, file=%s\0A\00", align 1
@.str.1 = private unnamed_addr constant [10 x i8] c"canon=%s\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @COMDLG32_GetCanonicalPath(i32 %0, i32* %1, i32* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i64, align 8
  store i32 %0, i32* %4, align 4
  store i32* %1, i32** %5, align 8
  store i32* %2, i32** %6, align 8
  %9 = load i32, i32* @MAX_PATH, align 4
  %10 = zext i32 %9 to i64
  %11 = call i8* @llvm.stacksave()
  store i8* %11, i8** %7, align 8
  %12 = alloca i32, i64 %10, align 16
  store i64 %10, i64* %8, align 8
  %13 = load i32, i32* %4, align 4
  %14 = load i32*, i32** %6, align 8
  %15 = call i32 @COMDLG32_GetDisplayNameOf(i32 %13, i32* %14)
  %16 = icmp ne i32 %15, 0
  br i1 %16, label %21, label %17

17:                                               ; preds = %3
  %18 = load i32, i32* @MAX_PATH, align 4
  %19 = load i32*, i32** %6, align 8
  %20 = call i32 @GetCurrentDirectoryW(i32 %18, i32* %19)
  br label %21

21:                                               ; preds = %17, %3
  %22 = load i32*, i32** %6, align 8
  %23 = call i32 @PathAddBackslashW(i32* %22)
  %24 = load i32*, i32** %6, align 8
  %25 = call i32 @debugstr_w(i32* %24)
  %26 = load i32*, i32** %5, align 8
  %27 = call i32 @debugstr_w(i32* %26)
  %28 = call i32 (i8*, i32, ...) @TRACE(i8* getelementptr inbounds ([31 x i8], [31 x i8]* @.str, i64 0, i64 0), i32 %25, i32 %27)
  %29 = load i32*, i32** %5, align 8
  %30 = call i64 @PathIsRelativeW(i32* %29)
  %31 = icmp ne i64 %30, 0
  br i1 %31, label %32, label %36

32:                                               ; preds = %21
  %33 = load i32*, i32** %6, align 8
  %34 = load i32*, i32** %5, align 8
  %35 = call i32 @lstrcatW(i32* %33, i32* %34)
  br label %50

36:                                               ; preds = %21
  %37 = load i32*, i32** %5, align 8
  %38 = call i32 @PathGetDriveNumberW(i32* %37)
  %39 = icmp eq i32 %38, -1
  br i1 %39, label %40, label %45

40:                                               ; preds = %36
  %41 = load i32*, i32** %6, align 8
  %42 = getelementptr inbounds i32, i32* %41, i64 2
  %43 = load i32*, i32** %5, align 8
  %44 = call i32 @lstrcpyW(i32* %42, i32* %43)
  br label %49

45:                                               ; preds = %36
  %46 = load i32*, i32** %6, align 8
  %47 = load i32*, i32** %5, align 8
  %48 = call i32 @lstrcpyW(i32* %46, i32* %47)
  br label %49

49:                                               ; preds = %45, %40
  br label %50

50:                                               ; preds = %49, %32
  %51 = load i32*, i32** %6, align 8
  %52 = call i32 @PathCanonicalizeW(i32* %12, i32* %51)
  %53 = load i32*, i32** %6, align 8
  %54 = call i32 @lstrcpyW(i32* %53, i32* %12)
  %55 = load i32*, i32** %6, align 8
  %56 = call i32 @debugstr_w(i32* %55)
  %57 = call i32 (i8*, i32, ...) @TRACE(i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str.1, i64 0, i64 0), i32 %56)
  %58 = load i8*, i8** %7, align 8
  call void @llvm.stackrestore(i8* %58)
  ret void
}

; Function Attrs: nounwind
declare i8* @llvm.stacksave() #1

declare dso_local i32 @COMDLG32_GetDisplayNameOf(i32, i32*) #2

declare dso_local i32 @GetCurrentDirectoryW(i32, i32*) #2

declare dso_local i32 @PathAddBackslashW(i32*) #2

declare dso_local i32 @TRACE(i8*, i32, ...) #2

declare dso_local i32 @debugstr_w(i32*) #2

declare dso_local i64 @PathIsRelativeW(i32*) #2

declare dso_local i32 @lstrcatW(i32*, i32*) #2

declare dso_local i32 @PathGetDriveNumberW(i32*) #2

declare dso_local i32 @lstrcpyW(i32*, i32*) #2

declare dso_local i32 @PathCanonicalizeW(i32*, i32*) #2

; Function Attrs: nounwind
declare void @llvm.stackrestore(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
